0.4 port to 1.20.1. Correctly drawing stack numbers and dura bar